# project-catalog

./: .gitignore  README.md  pyproject.toml
notebooks/: SNR_scatter_plot.ipynb  check_hdrs.ipynb  example.ipynb  match_injections_with_hdrs.ipynb  possible_metrics.ipynb  save_feathers.ipynb
notebooks/compute_values/: compute_hdrs.ipynb  compute_match_sangria.ipynb  compute_snr_sangria.ipynb  find_injection_candidates.ipynb
old_files/: compute_hdrs.ipynb  compute_snr_sangria.ipynb  find_injection_candidates.ipynb
plots_PN/: SNR_scatter_plot.ipynb  example.ipynb  possible_metrics.ipynb  snr_freq_frac.ipynb
scripts/: run_hdrs.py
src/project_catalog/: __init__.py  galactic_binary.py  highest_density_region.py  match_injections.py  utils.py
